Bug#21620 ALTER TABLE affects other columns   Problem: for character sets having mbmaxlen==2,   any ALTER TABLE changed TEXT column type to MEDIUMTEXT,   due to wrong "internal length to create length" formula.   Fix: removing rounding code introduced in early 4.1 time,   which is not correct anymore.